# Allegro-Project

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  coverage.xml  main.py  pyproject.toml
.github/workflows/: ci.yaml
src/: main.py
src/allegro_project/: config.py  main.py
src/allegro_project/api/: mock_offers.py
src/allegro_project/auth/: allegro_auth_client.py  client.py  models.py
src/allegro_project/data/: mock_offers.py
src/allegro_project/interfaces/: repository.py
src/allegro_project/models/: offer.py
src/allegro_project/repositories/: offer_repository.py
src/allegro_project/routes/: mock_offers.py
src/allegro_project/services/: mock_offer_client.py  mock_offer_service.py
src/allegro_project/utils/: find_best_offer.py  result.py
src/data/: mock_offers.json
src/models/: offer.py
src/routes/: health.py  mock_offers.py
src/services/: mock_offer_client.py
tests/: test_health.py  test_hello.py
tests/api/: test_mock_offers.py
tests/auth/: test_allegro_auth.py
tests/integration/: test_service.py
tests/repositories/: test_offer_repository.py
tests/services/: test_offers.py
